[package]
name = "chip-8-emu"
version = "0.1.0"
authors = ["maslabgamer <maslabgamer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
device_query = "0.2.5"
minifb = "0.19.1"

[profile.dev]
opt-level = 3
